fix: Support is isSiteAdmin + undeclared var + z-index

--- a/app/webroot/css/references-graph.css
+++ b/app/webroot/css/references-graph.css
@@ -109,6 +109,6 @@
 
 .network-typeahead {
 	position: absolute;
-	right: 2px;
+	right: 20px;
 	z-index: 1;
 }
